# pysports

./: .pre-commit-config.yaml  AUTHORS.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: api.md  installation.md  usage.md
pysports/: __init__.py  cli.py
pysports/api/: utils.py
pysports/api/fb/: constants.py  fb_utils.py  league_ids.py  roster.py  schedule.py  squad_ids.py  team.py
pysports/api/mlb/: boxscore.py  constants.py  mlb_utils.py  player.py  roster.py  schedule.py  teams.py
pysports/api/nba/: boxscore.py  constants.py  nba_utils.py  player.py  roster.py  schedule.py  teams.py
pysports/api/ncaab/: boxscore.py  conferences.py  constants.py  ncaab_utils.py  player.py  rankings.py  roster.py  schedule.py  teams.py
pysports/api/ncaaf/: boxscore.py  conferences.py  constants.py  ncaaf_utils.py  player.py  rankings.py  roster.py  schedule.py  teams.py
pysports/api/nfl/: boxscore.py  constants.py  nfl_utils.py  player.py  roster.py  schedule.py  teams.py
pysports/api/nhl/: boxscore.py  constants.py  nhl_utils.py  player.py  roster.py  schedule.py  teams.py
tests/: __init__.py  test_app.py
tests/exhaustive/: fb_tests.py  mlb_tests.py  nba_tests.py  ncaab_tests.py  ncaaf_tests.py  nfl_tests.py  nhl_tests.py
tests/integration/boxscore/: test_mlb_boxscore.py  test_nba_boxscore.py  test_ncaab_boxscore.py  test_ncaaf_boxscore.py  test_nfl_boxscore.py  test_nhl_boxscore.py
tests/integration/conferences/: test_ncaab_conferences.py  test_ncaaf_conferences.py
tests/integration/rankings/: test_ncaab_rankings.py  test_ncaaf_rankings.py
tests/integration/roster/: test_fb_roster.py  test_mlb_roster.py  test_nba_roster.py  test_ncaab_roster.py  test_ncaaf_roster.py  test_nfl_roster.py  test_nhl_roster.py
tests/integration/schedule/: test_fb_schedule.py  test_mlb_schedule.py  test_nba_schedule.py  test_ncaab_schedule.py  test_ncaaf_schedule.py  test_nfl_schedule.py  test_nhl_schedule.py
tests/integration/team/: test_fb_team.py
tests/integration/teams/: test_mlb_integration.py  test_nba_integration.py  (+4 more)
tests/unit/: test_fb_roster.py  test_fb_schedule.py  test_fb_team.py  test_fb_utils.py  test_mlb_boxscore.py  test_mlb_roster.py  test_mlb_schedule.py  test_mlb_teams.py  test_nba_boxscore.py  test_nba_roster.py  test_nba_schedule.py  test_nba_teams.py  test_nba_utils.py  test_ncaab_boxscore.py  test_ncaab_roster.py  test_ncaab_schedule.py  test_ncaab_teams.py  test_ncaaf_boxscore.py  test_ncaaf_roster.py  test_ncaaf_schedule.py  test_ncaaf_teams.py  test_nfl_boxscore.py  test_nfl_roster.py  test_nfl_schedule.py  test_nfl_teams.py  test_nhl_boxscore.py  test_nhl_roster.py  test_nhl_schedule.py  test_nhl_teams.py  test_utils.py
(+54 files in other folders)
